# smart-meter-data

./: .gitignore  Dockerfile  LICENSE.md  README.md  README_MAGEAI.md  dev.env  pyproject.toml  sandbox.ipynb
mage_data/smart-meter-data/.cache/: block_action_objects_mapping  blocks_to_pipeline_mapping  pipeline_details_mapping
smart-meter-data/: metadata.yaml
smart-meter-data/data_exporters/: axpo_open_data_to_gcs_partioned.py  write_to_bq_agg.py  write_to_bq_raw.py  writer_smd.py
smart-meter-data/data_loaders/: axpo_open_data.py  load_from_gcs.py
smart-meter-data/pipelines/example_pipeline/: metadata.yaml
smart-meter-data/pipelines/smart_meter_data_ingestion/: metadata.yaml
smart-meter-data/pipelines/smart_meter_data_to_bq/: metadata.yaml
smart-meter-data/transformers/: transform_agg.py  transform_clean.py
test/: metadata.yaml
test/pipelines/example_pipeline/: metadata.yaml
