[tool.poetry]
name = "smart-meter-data"
version = "0.1.0"
description = ""
authors = ["alewieland <alexander.wieland.aw@gmail.com>"]
readme = "README.md"
packages = [{include = "smart_meter_data"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
mage-ai = {extras = ["dbt"], version = "^0.9.67"}
jupyter = "^1.0.0"
lab = "^8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
